# max-mxj

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HowTo-Contribute.md  LICENSE  README.md  appveyor.yml  package-info.json  package-info.json.in  slack_payload.json
examples/: 01.mxj~noise.demo.maxpat  02.mxj~shape.maxpat  03.mxj~.envfollow.maxpat  04.mxj~.phaser.maxpat  05.mxj~.fbDelay.maxpat  06.mxj~graincloud.maxpat  07.1.mxj~.biquad.maxpat  07.2.mxj~.djEq.maxpat  08.mxj~tableosc.maxpat  09.mxj~.audiofilebuf.maxpat  prim.loop.aif  social.aif
examples/classes/: audiofilebuf.java  biquad.java  djEq.java  envfollow.java  fbDelay.java  graincloud.java  noise.java  noiseperformer.java  phaser.java  shape1.java  tableosc.java
help/: Flies.maxhelp  GMDrums.maxhelp  MetroSeq.maxhelp  MorseGen.maxhelp  SpeakTest.maxhelp  StockWatch.maxhelp  WhichThread.maxhelp  buf.Op.maxhelp  echo.maxhelp  fibonacci.maxhelp  gaussian.maxhelp  hotbits.maxhelp  keep.maxhelp  list.Demultiplex.maxhelp  list.Ecils.maxhelp  list.Group.maxhelp  list.Intersection.maxhelp  list.Join.maxhelp  list.Length.maxhelp  list.Mth.maxhelp  list.Multiplex.maxhelp  list.Nth.maxhelp  list.Permutation.maxhelp  list.Queue.maxhelp  list.RandomSample.maxhelp  list.Reg.maxhelp  list.Replace.maxhelp  list.Replicate.maxhelp  list.Reverse.maxhelp  list.Rotate.maxhelp  list.Slice.maxhelp  list.Sort.maxhelp  list.Sub.maxhelp  list.Union.maxhelp  list.Unique.maxhelp  list.sum.maxhelp  listpackage.maxhelp  maxversion.maxhelp  mxj.maxhelp  mxj~.maxhelp  (+16 more)
java-classes/: max.java.config.txt
java-doc/: mxj_getting_started.txt
java-doc/api/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
java-doc/api-jitter/: allclasses-frame.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  packages.html  serialized-form.html
patchers/: README.org  audio-file_20160831-183158.maxtest.maxzip  check-class-file-version_20160830-123653.maxtest.maxzip  check-class-file-version_20160831-183158.maxtest.maxzip  clojure-test_20160830-123653.maxtest.maxzip  clojure-test_20160831-183158.maxtest.maxzip  compile.sh  isolated-class_20160831-183158.maxtest.maxzip  jarify.sh  jitlib-instantiation.maxtest.maxpat  makes-sound.maxtest.maxpat  noise-gen_20160831-183158.maxtest.maxzip  offline.tar  qualified-class-name_20160831-183158.maxtest.maxzip  qualified-class-name_JAR_20160831-183158.maxtest.maxzip  reports-java-version_20160830-123653.maxtest.maxzip  reports-java-version_20160831-183158.maxtest.maxzip  simple-instantiation-audio.maxtest.maxpat  simple-instantiation.maxtest.maxpat  simple-instantiation_20160831-183158.maxtest.maxzip  udp-java-then-native_20160831-183158.maxtest.maxzip  udp-native-then-java_20160830-123653.maxtest.maxzip  udp-native-then-java_20160831-183158.maxtest.maxzip
patchers/audio-file/: audio-file.maxproj
patchers/isolated-class/: isolated-class.maxproj
patchers/noise-gen/: noise-gen.maxproj
patchers/qualified-class-name_JAR/: qualified-class-name_JAR.maxproj
patchers/reports-java-version/: reports-java-version.maxproj
patchers/udp-java-then-native/: udp-java-then-native.maxproj
patchers/udp-native-then-java/: udp-native-then-java.maxproj
projects/: README.md  README.org  check-class-file-version.maxtest.maxzip  check-class-file-version_20160826_230926.maxtest.maxzip  check-class-file-version_20160830-095712.maxtest.maxzip  check-class-file-version_20160830-104156.maxtest.maxzip  check-class-file-version_20160830-115746.maxtest.maxzip  compile.sh  isolated-class_20160824_200944.maxtest.maxzip  isolated-class_20160826_121508.maxzip  isolated-class_20160830-095712.maxtest.maxzip  isolated-class_20160830-104156.maxtest.maxzip  isolated-class_20160830-115746.maxtest.maxzip  isolated-class_20160830-123653.maxtest.maxzip  jarify.sh  qualified-class-name_20160830-104156.maxtest.maxzip  qualified-class-name_20160830-115746.maxtest.maxzip  qualified-class-name_20160830-123653.maxtest.maxzip  qualified-class-name_JAR_20160830-115746.maxtest.maxzip  qualified-class-name_JAR_20160830-123653.maxtest.maxzip  reports-java-version_20160826_144223.maxtest.maxzip  reports-java-version_20160830-095712.maxtest.maxzip  reports-java-version_20160830-104156.maxtest.maxzip  reports-java-version_20160830-115746.maxtest.maxzip  simple-instantiation_20160824_122530.maxtest.maxzip  simple-instantiation_20160830-095712.maxtest.maxzip  simple-instantiation_20160830-104156.maxtest.maxzip  simple-instantiation_20160830-115746.maxtest.maxzip  simple-instantiation_20160830-123653.maxtest.maxzip  udp-java-then-native.maxtest.maxzip  udp-java-then-native_20160830-095712.maxtest.maxzip  udp-java-then-native_20160830-104156.maxtest.maxzip  udp-java-then-native_20160830-115746.maxtest.maxzip  udp-java-then-native_20160830-123653.maxtest.maxzip  udp-native-then-java.maxtest.maxzip  udp-native-then-java_20160830-095712.maxtest.maxzip  udp-native-then-java_20160830-104156.maxtest.maxzip  udp-native-then-java_20160830-115746.maxtest.maxzip
projects/check-class-file-version/: check-class-file-version.maxproj
projects/qualified-class-name/: qualified-class-name.maxproj
script/: test.sh
source/mxj/: Atom.c  Atom.h  ExceptionUtils.c  ExceptionUtils.h  IVirtualMachine.cpp  IVirtualMachine.h  IVirtualMachineAPI.h  Info.plist  JavaHomeOsx.c  JavaHomeOsx.h  MaxObject.h  OSXSys.h  OSXSys.mm  awt.c  awt.h  awtmacros.h  c74excludefromcollectives.json  callbacks.c  callbacks.h  cfm_dyn_jni_mxj~_prefix.h  cfm_dyn_jni_prefix.h  classes.c  classes.h  classpath.h  clock_callbacks.c  clock_callbacks.h  copyprot.c  copyprot.h  dbg.h  io.c  io.h  maxjava.c  maxjava.h  maxjavactx.c  mjglobals.h  mxj.def  mxj.sln  mxj.vcxproj  mxj_attr.c  mxj_attr.h  (+38 more)
source/projects/mxj/: CMakeLists.txt
source/projects/mxj_safe/: CMakeLists.txt  mxj_safe.cpp
source/projects/mxj_tilde/: CMakeLists.txt
testing/: README.md  package-info.json
(+215 files in other folders)
